force-app/main/default/objects/Project__c/fields/Date_end__c.field-meta.xml
<CustomField>
    <fullName>Date_end__c</fullName>
    <label>Date end</label>
    <type>Date</type>
</CustomField>