force-app/main/default/objects/Project__c/fields/Date_start__c.field-meta.xml
<CustomField>
    <fullName>Date_start__c</fullName>
    <inlineHelpText>Starting date of project</inlineHelpText>
    <label>Date start</label>
    <type>Date</type>
</CustomField>