force-app/main/default/objects/Project__c/listViews/Main_Overview.listView-meta.xml
<ListView>
    <fullName>Main_Overview</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Date_start__c</columns>
    <columns>Date_end__c</columns>
    <columns>Status__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date_end__c</field>
        <operation>greaterOrEqual</operation>
        <value>6/1/2017</value>
    </filters>
    <label>Main Overview</label>
</ListView>